--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -623,7 +623,7 @@ empiricalMetrics$tree2 = word(empiricalMetrics$tree, sep = '.tre')
 # The metrics not strongly correlated with richness that were used for RF models
 empMetrics2 = empiricalMetrics[, colnames(simuData)[statisticsIndices2]]
 
-predictedValues2reps = data.frame(tree = character(),
+predictedValues2 = data.frame(tree = character(),
                               model = character(), 
                               predictor = character(),
                               value = numeric())
@@ -652,18 +652,14 @@ set.seed(1)
                                     predictor = rep(predictors[j], nrow(empMetrics2)),
                                     value = predictions$predictions)
       
-        predictedValues2reps = rbind(predictedValues2reps, tmpPredictions)
+        predictedValues2 = rbind(predictedValues2, tmpPredictions)
       
       } # end if
     } # end models
   } # end predictors
 
-
-predictedValues2 = predictedValues2reps %>%
-  group_by(tree, model, predictor) %>%
-  summarize(value = mean(value, na.rm = T)) %>%
+predictedValues2 = predictedValues2 %>%
   arrange(predictor, model, tree)
-
 
 # Need to standardize the predicted parameter values relative to the range of values examined within a given model.  
 #   scaled = (x - min) / (max - min)          
@@ -866,23 +862,16 @@ write.csv(scaledPredictions2, 'derived_tree_data/scaled_predictions_empirical_tr
 # which were identified as the tree metrics with consistent responses to speciation
 
 empiricalModelInferencePlot('mut1', metric1='mean_branch_length_ext', metric2='laplac_spectrum_p',
-                             met1label = 'MBLE', met2label = 'LSP', 
-                            model.abbrev = F, legend = TRUE, cex.legend = 1.7, 
-                            cex.legendpts = 2.5, cex.metrics = 1.1, 
-                            metric.offset = .24, cex.clade = 1.3, 
-                            cex.quantiles = 1.2, cex.panel = 2.5, 
-                            cex.axis = 1.3, bar.space = .35, 
-                            cex.process = 1.4, lwd = 4)
-
-
-empiricalModelInferencePlot('mut1', metric1='mean_branch_length_ext', metric2='laplac_spectrum_p',
                               met1label = 'MBLE', met2label = 'LSP', 
                              model.abbrev = F, legend = TRUE, cex.legend = 2, 
                              cex.legendpts = 2.5, cex.metrics = 1.5, 
                              metric.offset = .24, cex.clade = 1.4, 
                              cex.quantiles = 1.5, cex.panel = 3, 
                              cex.axis = 1.75, bar.space = .35, 
-                             cex.process = 1.7, line.process = 5, line.quantile = 4, line.clade = 3, line.metrics = .9, cex.axis.quantiles = 1.75, lwd = 4, outer.margins = c(0, 4, 0, 0))
+                             cex.process = 1.7, line.process = 5, 
+                            line.quantile = 4, line.clade = 3, 
+                            line.metrics = .9, cex.axis.quantiles = 1.75, 
+                            lwd = 4, outer.margins = c(0, 4, 0, 0))
 
 # Plot of model inversion for dispersal across 6 empirical sister clade pairs
 # --bottom panel illustrates relative magnitude of average_leaf_depth and j_one
