--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -413,10 +413,10 @@ modelColors = data.frame(model = models,
                                    rgb(213/255, 94/255, 0),
                                    rgb(204/255, 121/255, 167/255)))
 
-par(mar = c(4, 6, 0, 0), mgp = c(4, 1, 0))
+par(mar = c(4, 6, 0, 0), mgp = c(4, 1, 0), mfrow = c(1,1))
 
 # Squaring the correlation values of predictabilityR2CV to get R2's
-x = barplot(t((predictabilityR2CV))^2, beside = T, las = 1, horiz = F, ylim = c(0 ,1.1), ylab = expression("Predicted-observed " ~ R^2), xaxt = "n", cex.lab = 1.8, cex.axis = 1.6, col = modelColors$color)
+x = barplot(t((predictabilityR2CV))^2, beside = T, las = 1, horiz = F, ylim = c(0 ,1.1), ylab = "Within model predictability", xaxt = "n", cex.lab = 1.8, cex.axis = 1.6, col = modelColors$color)
 
 # Add 'x' where process is missing from model
 missing.x = x[is.na(t(predictabilityR2CV))]
